--- a/recipes/templates/base.html
+++ b/recipes/templates/base.html
@@ -1,20 +1,26 @@
 {% load static %}
+<!-- templates/base.html -->
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Recipe Project</title>
-    <link rel="stylesheet" href="{% static 'style.css' %}">
+    <title>Recipes</title>
 </head>
 <body>
-    <header>
-        <h1>Recipe Manager</h1>
+    <div>
         <nav>
-            <a href="{% url 'recipe_list' %}">Home</a> |
-            <a href="{% url 'recipe_new' %}">Add Recipe</a>
+            <a href="{% url 'recipe_list' %}">Главная</a> |
+            {% if user.is_authenticated %}
+                Привет, {{ user.username }}!
+                <a href="{% url 'recipe_new' %}">Добавить рецепт</a> |
+                <a href="{% url 'logout' %}">Выйти</a>
+            {% else %}
+                <a href="{% url 'login' %}">Войти</a> |
+                <a href="{% url 'signup' %}">Регистрация</a>
+            {% endif %}
         </nav>
-    </header>
+    </div>
     {% block content %}
     {% endblock %}
 </body>
 </html>
+
